# nano-drive

./: .gitignore  Cargo.toml  project.json  run.bat
example/: Cargo.toml  build.rs  project.json
example/src/: lib.rs  main.rs
nd-cli/: Cargo.toml
nd-cli/src/: main.rs
nd-client/: Cargo.toml
nd-client/src/: input.rs  main.rs
nd-core/: Cargo.toml
nd-core/src/: engine.rs  lib.rs  main.rs  plugin.rs  state.rs~  system.rs  world.rs
nd-engine/: Cargo.toml
nd-engine/src/: action.rs  client.rs  engine.rs  lib.rs  main.rs  plugin.rs  system.rs  world.rs
nd-godot/: Cargo.toml  icon.svg.import  main.gd  main.gd.uid  nano-drive.gdextension  nano-drive.gdextension.uid  project.godot
nd-godot/src/: lib.rs  main.tscn
nd-sim/: Cargo.toml
nd-sim/src/: main.rs
