[package]
name = "nd-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
assets_manager = { workspace = true }
clap = { workspace = true }
crossbeam = { workspace = true }
dlopen2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ipc-channel = { workspace = true }
tokio = { workspace = true }
fxhash = { workspace = true }
